# NeuroIndex

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  demo.sh
clients/: README.md
clients/curl/: examples.sh  http-examples.sh
clients/dotnet/: NeuroIndexClient.cs
clients/go/: README.md  go.mod  neuroindex_client.go
clients/nodejs/: neuroindex-client.js  neuroindex-http-client.js
clients/python/: insert_10k_http.py  insert_1m_resp.py  neuroindex_client.py  neuroindex_http_client.py
crates/arena/: Cargo.toml
crates/arena/src/: lib.rs
crates/art/: Cargo.toml
crates/art/src/: full_art.rs  lib.rs  node.rs
crates/bench/: Cargo.toml
crates/bench/benches/: art_vs_ttree.rs  kv.rs  performance_benchmark.rs  phase8_perf.rs  ycsb.rs
crates/cuckoo/: Cargo.toml
crates/cuckoo/src/: filter.rs  lib.rs  opt.rs  simd.rs
crates/cuckoofilter/: Cargo.toml
crates/cuckoofilter/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: background_snapshot.rs  change_events.rs  config.rs  eviction.rs  geospatial.rs  lib.rs  metrics.rs  optimize.rs  pubsub.rs  query.rs  raft.rs  raft_rpc.rs  replication.rs  resource_limits.rs  secondary_index.rs  sharded_wal.rs  sql.rs  transaction.rs  ttl.rs
crates/hopscotch/: Cargo.toml
crates/hopscotch/src/: lib.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: connection_limit.rs  main.rs  metrics.rs  resource_limits.rs
crates/neuroindex-ws/: Cargo.toml  test.html
crates/neuroindex-ws/src/: integrated_server.rs  lib.rs  main.rs
crates/perf/: Cargo.toml
crates/perf/src/: lib.rs  tuning.rs
crates/resp-cli/: Cargo.toml
crates/resp-cli/src/: main.rs
crates/resp-server/: Cargo.toml  logo.txt
crates/resp-server/src/: main.rs  rate_limit.rs  resource_limits.rs
crates/ttree/: Cargo.toml
crates/ttree/src/: lib.rs  prefetch.rs
crates/utils/src/: lib.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
docs/: BENCHMARKS.md  HOW_IT_WORKS_IT.md  QUICK_START.md  README.md  README_IT.md  TECHNICAL_EN.md  TECHNICAL_IT.md  index.html
docs/debian/dists/stable/: Release
docs/debian/dists/stable/main/binary-amd64/: Packages
docs/debian/pool/main/: neuroindex_0.1.0-1_amd64.deb
document/: README_IT.md  TECHNICAL.md  TECHNICAL_IT.md
gh-pages/: .gitignore
neuroindex/: Cargo.toml
neuroindex-apt-repo/: .gitignore  README.md  index.html
neuroindex-apt-repo/debian/dists/stable/: Release
neuroindex-apt-repo/debian/dists/stable/main/binary-amd64/: Packages
neuroindex-apt-repo/debian/pool/main/: neuroindex_0.1.0-1_amd64.deb
neuroindex-release-v0.1.0/: neuroindex_0.1.0-1_amd64.deb
neuroindex-release-v0.1.0/examples/: config.toml
neuroindex-release-v0.1.0/gh-pages/debian/dists/stable/: Release
neuroindex-release-v0.1.0/gh-pages/debian/dists/stable/main/binary-amd64/: Packages
neuroindex/debian/: postinst  postrm  prerm
neuroindex/src/: main.rs
neuroindex/systemd/: neuroindex-http.service  neuroindex-resp.service  neuroindex.service
