[workspace]
members = [
    "neuroindex",
    "crates/engine",
    "crates/cuckoo",
    "crates/cuckoofilter",
    "crates/utils",
    "crates/bench",
    "crates/ttree",
    "crates/arena",
    "crates/hopscotch",
    "crates/wal",
    "crates/perf",
    "crates/resp-server",
    "crates/resp-cli",
    "crates/http-server",
    "crates/art",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
ahash = "0.8"
parking_lot = "0.12"
rand = "0.8"
criterion = { version = "0.5", default-features = false }
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.4"
zstd = "0.12"
tempfile = "3.10"
