[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { workspace = true }
engine = { path = "../engine" }
art = { path = "../art" }
ttree = { path = "../ttree" }
rand = { workspace = true }

[[bench]]
name = "kv"
harness = false

[[bench]]
name = "ycsb"
harness = false

[[bench]]
name = "phase8_perf"
harness = false

[[bench]]
name = "art_vs_ttree"
harness = false

[[bench]]
name = "performance_benchmark"
harness = false
