[package]
name = "neuroindex-http"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
