[package]
name = "neuroindex-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine", features = ["change-events"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { workspace = true }
serde_json = "1.0"
parking_lot = { workspace = true }
ahash = { workspace = true }
regex = "1.11"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }

[lib]
name = "neuroindex_ws"
path = "src/lib.rs"

[[bin]]
name = "neuroindex-ws"
path = "src/main.rs"

[[bin]]
name = "neuroindex-integrated"
path = "src/bin/integrated.rs"
