[package]
name = "neuroindex-resp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neuroindex-resp-server"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
